--- a/app/src/main/res/layout/activity_dish.xml
+++ b/app/src/main/res/layout/activity_dish.xml
@@ -7,6 +7,19 @@
     android:visibility="visible"
     tools:context=".DishActivity">
 
+    <ImageView
+        android:id="@+id/imgBackDish"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:alpha="0.7"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/android_tavern_r" />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/dishPicturesPager"
         android:layout_width="0dp"
@@ -16,40 +29,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgCart"
-        android:layout_width="45dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:contentDescription="@string/project_name"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtIngredients"
-        app:srcCompat="@drawable/basket" />
-
-    <Button
-        android:id="@+id/btnInfoBasket"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="35dp"
-        android:background="@drawable/rounded_corner"
-        android:text="0"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        android:textStyle="bold|italic"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />
-
     <TextView
         android:id="@+id/txtDishName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="casual"
-        android:textSize="20sp"
+        android:fontFamily="@font/dsgabriele"
+        android:shadowColor="#393131"
+        android:shadowDx="2"
+        android:shadowDy="5"
+        android:shadowRadius="5"
+        android:textSize="30sp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +71,13 @@
         android:id="@+id/txtPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:fontFamily="@font/dsgabriele"
+        android:shadowColor="#393131"
+        android:shadowDx="2"
+        android:shadowDy="5"
+        android:shadowRadius="5"
+        android:textSize="30sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/btnCart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,6 +99,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/dsgabriele"
+        android:shadowColor="#393131"
+        android:shadowDx="2"
+        android:shadowDy="5"
+        android:shadowRadius="5"
+        android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDishName" />
@@ -114,10 +118,15 @@
         android:cursorVisible="false"
         android:editable="false"
         android:ems="10"
-        android:fontFamily="casual"
+        android:fontFamily="@font/dsgabriele"
         android:inputType="numberSigned"
         android:textAlignment="center"
+        android:shadowColor="#393131"
+        android:shadowDx="2"
+        android:shadowDy="5"
+        android:shadowRadius="5"
         android:textSize="20sp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/dvdTwo"
         app:layout_constraintEnd_toEndOf="parent"
