--- a/app/src/main/res/layout/layout_cat_dishes.xml
+++ b/app/src/main/res/layout/layout_cat_dishes.xml
@@ -14,66 +14,61 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="160dp">
 
         <ImageView
             android:id="@+id/imgDish"
-            android:layout_width="110sp"
-            android:layout_height="90sp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="160dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/android_cooking"
+            app:srcCompat="@drawable/android_default"
             tools:ignore="VectorDrawableCompat" />
 
         <TextView
             android:id="@+id/txtDish"
-            android:layout_width="178dp"
-            android:layout_height="33dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="50dp"
             android:text="Dish"
             android:textAlignment="textStart"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imgNext"
             app:layout_constraintStart_toEndOf="@+id/imgDish"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.506" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtId"
-            android:layout_width="176dp"
-            android:layout_height="22dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imgDish"
-            app:layout_constraintTop_toBottomOf="@+id/txtDish"
-            app:layout_constraintVertical_bias="0.4" />
+            app:layout_constraintTop_toBottomOf="@+id/txtDish" />
 
         <ImageView
             android:id="@+id/imgNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txtDish"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_media_play"
+            app:srcCompat="@drawable/ic_baseline_navigate_next_24"
             tools:ignore="ImageContrastCheck" />
 
         <TextView
             android:id="@+id/txtListPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="€"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtId"
-            app:layout_constraintTop_toBottomOf="@+id/imgNext"
-            app:layout_constraintVertical_bias="0.388" />
+            app:layout_constraintTop_toBottomOf="@+id/txtDish" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
