Corrections de bug

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,6 @@
     <item
         android:id="@+id/itemAbout"
         android:title="Basket"
-        android:icon="@drawable/ic_baseline_question"
+        android:icon="@drawable/ic_question"
         app:showAsAction="always"/>
 </menu>
