--- a/app/src/main/res/layout/activity_dish.xml
+++ b/app/src/main/res/layout/activity_dish.xml
@@ -33,14 +33,16 @@
         android:id="@+id/txtDishName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/dsgabriele"
         android:shadowColor="#393131"
         android:shadowDx="2"
         android:shadowDy="5"
         android:shadowRadius="5"
-        android:textSize="30sp"
         android:textColor="@color/black"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,14 +100,16 @@
         android:id="@+id/txtIngredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/dsgabriele"
         android:shadowColor="#393131"
         android:shadowDx="2"
         android:shadowDy="5"
         android:shadowRadius="5"
-        android:textSize="20sp"
         android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDishName" />
